# diplom-gb3474

./: .gitignore  README.md  pyproject.toml  requirements.txt
MrGlider/: README.md  app.py  asgi.py  config.py  database.py  models.py  requirements-dev.txt  requirements-test.txt  requirements.txt  services.py  wsgi.py
MrGlider/personalpage/personalapp/: admin.py  models.py  services.py  urls.py  views.py
MrGlider/personalpage/personalapp/migrations/: 0002_user_spec_alter_color_color_id_alter_event_event_id.py  0003_rename_link_project_website_alter_color_color_id_and_more.py
MrGlider/personalpage/personalapp/models/: __init__.py  event.py  single.py  user.py
MrGlider/personalpage/personalapp/templates/personalapp/: main.html
MrGlider/personalpage/personalpage/: main.html  settings.py  urls.py
MrGlider/personalpage/static/scripts/: nav.js
MrGlider/personalpage/static/styles/: base.css  calendar.css
MrGlider/personalpage/templates/personalapp/: base.html
info/: diplom.docx
personalpage/: .env  start.sh  stop.sh
personalpage/personalapp/: admin.py  urls.py
personalpage/personalapp/migrations/: 0001_initial.py
personalpage/personalapp/models/: __init__.py
personalpage/personalpage/: asgi.py  settings.py  urls.py  wsgi.py
personalpage/static/scripts/: calendar.js  nav.js  night.js
personalpage/static/styles/: base.css
