[tool.poetry]
name = "diplom"
version = "0.1.0"
description = "GB3474 Python developer 2022-2023"
authors = ["Maksim Aleksanin <maksim.g00gle@gmail.com>"]
license = "unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pyright = "^1.1.339"
ruff = "^0.2.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
